fix: fix location icon z-index

--- a/src/modals/edit-profile/profile-form/location-input/LocationInput.css
+++ b/src/modals/edit-profile/profile-form/location-input/LocationInput.css
@@ -7,6 +7,7 @@
         position: absolute;
         top: 2.1rem;
         right: 0;
+        z-index: 10;
         transform: translateY(-50%);
         font-size: 1.3rem;
         transition: color 0.2s ease;
